--- a/css/main.css
+++ b/css/main.css
@@ -136,18 +136,6 @@ ul, h1, h2, h3, p {
   }
 }
 
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .site-nav__logo {
   padding-top: 16px;
   padding-bottom: 16px;
@@ -293,6 +281,7 @@ ul, h1, h2, h3, p {
 .mobmenu {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   padding-top: 48px;
@@ -313,17 +302,23 @@ ul, h1, h2, h3, p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  overflow: auto;
+  overflow-y: scroll;
+  z-index: 999;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobmenu > .container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 @media screen and (min-width: 768px) {
   .mobmenu {
     display: none;
   }
-}
-
-.mobmenu .is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
 }
 
 .mobmenu__open {
@@ -996,20 +991,16 @@ ul, h1, h2, h3, p {
 }
 
 .filter {
-  padding-top: 94px;
+  padding-top: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .filter {
+    padding-top: 94px;
+  }
 }
 
 .filter-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-bottom: 50px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 .filter-list__item {
@@ -1068,6 +1059,8 @@ ul, h1, h2, h3, p {
 
 .projects__item {
   margin-bottom: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1114,6 +1107,14 @@ ul, h1, h2, h3, p {
 }
 
 .projects__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
   text-decoration: none;
 }
 
@@ -1134,6 +1135,9 @@ ul, h1, h2, h3, p {
 }
 
 .projects__text {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 24px;
   border-right: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
