--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,24 +1,24 @@
 .clients{
     padding-top: 60px;
     padding-bottom: 60px;
-    @media screen and (min-width:480px){padding-top: 60px; padding-bottom: 60px;}
-    @media screen and (min-width:768px){padding-top: 60px; padding-bottom: 60px;}
-    @media screen and (min-width:1200px){padding-top: 94px; margin-top: 0;}}
+    @include mobile {padding-top: 60px; padding-bottom: 60px;}
+    @include tablet {padding-top: 60px; padding-bottom: 60px;}
+    @include desktop {padding-top: 94px; margin-top: 0;}}
 .clients__list{
     align-items: center;
     justify-content: center;
-@media screen and (min-width:480px){display:flex; flex-wrap: wrap; gap: 30px;}
-@media screen and (min-width:768px){display:flex;}}
+    @include mobile {display:flex; flex-wrap: wrap; gap: 30px;}
+    @include tablet {display:flex;}}
 .clients__item{
     align-items: center;
     width: 100%;
     height: 92px;
     @media screen and (max-width:479px){padding: 5px;}
-    @media screen and (min-width:480px){flex-basis: calc((100% - 60px)/2);}
+    @include mobile {flex-basis: calc((100% - 60px)/2);}
     @media screen and (max-width:767px){&:nth-child(2n){margin-right: 0;}}
-    @media screen and (min-width:768px){flex-basis: calc((100% - 90px)/3);}
+    @include tablet {flex-basis: calc((100% - 90px)/3);}
     @media screen and (max-width:1199px){&:nth-child(3n){margin-right: 0;}}
-    @media screen and (min-width:1200px){flex-basis: calc((100% - 180px)/6);
+    @include desktop {flex-basis: calc((100% - 180px)/6);
         &:last-child{margin-right: 0;}}}
 .clients__link{
     @include display;
