--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,7 +2,7 @@
     @include mobile{min-width: 480px;}
     // display: flex;
 }
-.site-nav{@include display;}
+// .site-nav{@include display;}
 .site-nav__logo {
     padding-top: 16px;
     padding-bottom: 16px;
