--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -1,25 +1,27 @@
 .projects{
-    @media screen and (min-width:480px){display:flex;flex-wrap:wrap;gap:30px;}
-    @media screen and (min-width:768px){display:flex;}}
+    @include mobile {display:flex;flex-wrap:wrap;gap:30px;}
+    @include tablet {display:flex;}}
 .projects__item{
     margin-bottom: 30px;
-    // padding-left: 15px;
-    // padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     align-items: center;
     justify-content: center;
     width: 100%;
-    // @media screen and (max-width:767px){}
-    @media screen and (min-width:768px){flex-basis: calc((100% - 30px)/2);margin-top: 30px;}
+    @include tablet {flex-basis: calc((100% - 30px)/2);margin-top: 30px;}
     @media screen and (max-width:1199px){
         &:nth-child(2n){margin-right: 0;}
         &:nth-last-child(-n + 3){margin-bottom: 0;}}
-    @media screen and (min-width:1200px){flex-basis: calc((100% - 60px) / 4); padding:0;
+    @include desktop {flex-basis: calc((100% - 60px) / 4); padding:0;
         &:nth-child(3n){margin-right: 0;}
         &:nth-last-child(-n + 3){margin-bottom: 0;}}
     transition: box-shadow 250ms $animation;
     &:hover{box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);}
 }
-.projects__link{text-decoration: none;}
+.projects__link{display: flex;
+    flex-direction: column;
+    height: 100%;
+    text-decoration: none;}
 .projects__name{
     color:$titleColor;
     @include font(700,18,2,0.06);}
@@ -27,6 +29,7 @@
     color:$textColor;
     @include font(400,16,1.9);}
 .projects__text{
+    flex-grow: 1;
     padding: 20px 24px; 
     border-right:1px solid $borderColor; 
     border-bottom:1px solid $borderColor;
