--- a/css/main.css
+++ b/css/main.css
@@ -130,15 +130,39 @@ ul, h1, h2, h3, p {
   padding-bottom: 94px;
 }
 
+.page-header__container {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
 @media screen and (min-width: 480px) {
   .page-header__container {
     min-width: 480px;
   }
 }
+@media screen and (min-width: 768px) {
+  .page-header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 
 .site-nav__logo {
-  padding-top: 16px;
-  padding-bottom: 16px;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.16;
@@ -229,11 +253,31 @@ ul, h1, h2, h3, p {
   }
 }
 
-.site-contact__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
+@media screen and (min-width: 768px) {
+  .site-contact__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin-left: 96px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .site-contact__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
 .site-contact__item {
@@ -243,10 +287,14 @@ ul, h1, h2, h3, p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 50px;
 }
-.site-contact__item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 1200px) {
+  .site-contact__item {
+    margin-right: 50px;
+  }
+  .site-contact__item:last-child {
+    margin-right: 0;
+  }
 }
 
 .site-contact__link {
@@ -287,8 +335,18 @@ ul, h1, h2, h3, p {
   padding-top: 48px;
   padding-bottom: 48px;
   background-color: #FFFFFF;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
+  z-index: 999;
+}
+.mobmenu.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 .mobmenu > .container {
   height: 100%;
@@ -302,18 +360,6 @@ ul, h1, h2, h3, p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  overflow-y: scroll;
-  z-index: 999;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.mobmenu > .container.is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
 }
 @media screen and (min-width: 768px) {
   .mobmenu {
@@ -322,7 +368,17 @@ ul, h1, h2, h3, p {
 }
 
 .mobmenu__open {
-  margin-right: auto;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: transparent;
+  border: none;
+  fill: #212121;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobmenu__open :hover, .mobmenu__open :focus {
+  fill: #2196F3;
 }
 @media screen and (min-width: 768px) {
   .mobmenu__open {
@@ -331,40 +387,18 @@ ul, h1, h2, h3, p {
 }
 
 .mobmenu__close {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   position: absolute;
-  top: 16px;
-  right: 16px;
-  margin-left: auto;
+  top: 20px;
+  right: 20px;
   margin-bottom: 30px;
   border: none;
+  fill: #212121;
   background-color: transparent;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mobmenu__close:hover, .mobmenu__close:focus {
+.mobmenu__close :hover, .mobmenu__close :focus {
   fill: #2196F3;
-}
-
-.close-icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  fill: aqua;
 }
 
 .mobmenu__item:not(:last-child) {
@@ -437,10 +471,6 @@ ul, h1, h2, h3, p {
 .last {
   padding-right: 0;
   border: none;
-}
-
-.close-icon {
-  fill: black;
 }
 
 .banner {
@@ -563,9 +593,6 @@ ul, h1, h2, h3, p {
 }
 
 .feature__list {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -669,6 +696,7 @@ ul, h1, h2, h3, p {
   .feature__title {
     margin-bottom: 10px;
     margin-top: 0;
+    text-align: left;
   }
 }
 
@@ -1000,7 +1028,31 @@ ul, h1, h2, h3, p {
 }
 
 .filter-list {
-  margin-bottom: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .filter-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter-list {
+    margin-bottom: 50px;
+  }
 }
 
 .filter-list__item {
@@ -1014,6 +1066,7 @@ ul, h1, h2, h3, p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 15px;
   text-align: center;
   background-color: #F5F4FA;
   color: #212121;
@@ -1181,7 +1234,6 @@ ul, h1, h2, h3, p {
 
 /* Повторюючі значення */
 .communications {
-  text-decoration: none;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
@@ -1204,13 +1256,20 @@ ul, h1, h2, h3, p {
   background-color: #2F303A;
 }
 
-.page-footer__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (min-width: 480px) {
+  .page-footer__content {
+    min-width: 480px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .page-footer__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .page-footer__logo {
