--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -5,7 +5,6 @@
     @include tablet {padding-top: 60px;padding-bottom: 60px;}
     @include desktop {padding-top: 94px;}}
 .feature__list{
-    align-items: center;
     justify-content: center;
     @include mobile {
         display:flex;
@@ -41,5 +40,6 @@
         text-align: center;}
     @include tablet {
         margin-bottom: 10px;
-        margin-top: 0;}}
+        margin-top: 0;
+        text-align: left;}}
 .feature__text{@include font(400,14,1.7);}
