--- a/css/main.css
+++ b/css/main.css
@@ -335,8 +335,8 @@ ul, h1, h2, h3, p {
   padding-top: 48px;
   padding-bottom: 48px;
   background-color: #FFFFFF;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -344,9 +344,16 @@ ul, h1, h2, h3, p {
   overflow-y: scroll;
   z-index: 999;
 }
-.mobmenu.is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+@media screen and (min-width: 480px) {
+  .mobmenu.is-open {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobmenu {
+    display: none;
+  }
 }
 .mobmenu > .container {
   height: 100%;
@@ -435,10 +442,18 @@ ul, h1, h2, h3, p {
 
 .tel {
   font-weight: 500;
-  font-size: 34px;
+  font-size: 30px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2196F3;
+}
+@media screen and (min-width: 480px) {
+  .tel {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
 }
 
 .mail {
@@ -457,11 +472,19 @@ ul, h1, h2, h3, p {
   display: -ms-inline-flexbox;
   display: inline-flex;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2196F3;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+@media screen and (min-width: 480px) {
+  .mobmenu-sub__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
 }
 
 .first {
@@ -487,8 +510,8 @@ ul, h1, h2, h3, p {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .banner {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/bannermob2.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/bannermob2.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(./image/bannermob2.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./image/bannermob2.jpg);
   }
 }
 @media screen and (min-width: 480px) {
@@ -496,14 +519,14 @@ ul, h1, h2, h3, p {
     padding-top: 118px;
     padding-bottom: 198px;
     height: 400px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/bannertab1.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/bannertab1.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(./image/bannertab1.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./image/bannertab1.jpg);
   }
 }
 @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .banner {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/bannertab2.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/bannertab2.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(./image/bannertab2.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./image/bannertab2.jpg);
   }
 }
 @media screen and (min-width: 768px) {
@@ -511,14 +534,14 @@ ul, h1, h2, h3, p {
     padding-top: 118px;
     padding-bottom: 198px;
     height: 400px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/bannerdesk1.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/bannerdesk1.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(./image/bannerdesk1.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./image/bannerdesk1.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .banner {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/bannerdesk2.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/bannerdesk2.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(./image/bannerdesk2.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./image/bannerdesk2.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1256,6 +1279,14 @@ ul, h1, h2, h3, p {
   background-color: #2F303A;
 }
 
+.page-footer__content {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 @media screen and (min-width: 480px) {
   .page-footer__content {
     min-width: 480px;
@@ -1273,7 +1304,6 @@ ul, h1, h2, h3, p {
 }
 
 .page-footer__logo {
-  display: block;
   margin-bottom: 20px;
   font-style: normal;
 }
@@ -1308,16 +1338,20 @@ ul, h1, h2, h3, p {
 }
 
 .footer-subscribe__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-top: 20px;
+}
+@media screen and (min-width: 768px) {
+  .footer-subscribe__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .footer-subscribe__item {
@@ -1325,15 +1359,6 @@ ul, h1, h2, h3, p {
 }
 
 .footer-subscribe__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   width: 44px;
@@ -1341,6 +1366,19 @@ ul, h1, h2, h3, p {
   fill: #FFFFFF;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .footer-subscribe__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .footer-subscribe__link:hover, .footer-subscribe__link:focus {
   background-color: #2196F3;
@@ -1351,16 +1389,20 @@ ul, h1, h2, h3, p {
 }
 
 .footer-sing__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-top: 20px;
+}
+@media screen and (min-width: 768px) {
+  .footer-sing__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .footer-sing__input {
@@ -1376,14 +1418,18 @@ ul, h1, h2, h3, p {
 }
 
 .footer-sing__btn {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
   width: 200px;
+}
+@media screen and (min-width: 768px) {
+  .footer-sing__btn {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
 }
 
 .footer-sing__text {
@@ -1401,6 +1447,7 @@ ul, h1, h2, h3, p {
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 100px;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1411,7 +1458,7 @@ ul, h1, h2, h3, p {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 530px;
+  width: 100%;
   padding: 40px;
   background-color: #FFFFFF;
   -webkit-transform: translate(-50%, -50%) scale(1);
