--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -12,11 +12,13 @@
     padding-bottom: 60px;
     background-color:$footerColor;}
 .page-footer__content{
+    align-items: center;
+    justify-content: center;
     @include mobile {min-width: 480px;}
     @include desktop {display: flex; align-items: baseline;}
 }
 .page-footer__logo{
-    display: block;
+    // display: block;
     margin-bottom: 20px;
     font-style: normal;}
 .studio--inverse{color:$backgroundColor;}
@@ -29,11 +31,11 @@
     &:hover, &:focus{color:$accentColor;}}
 .footer-subscribe{margin-left: 70px;}
 .footer-subscribe__list{
-    @include display;
+    @include tablet {@include display};
     margin-top: 20px;}
 .footer-subscribe__item{margin-right: 10px;}
 .footer-subscribe__link{ 
-    @include display;
+    @include tablet {@include display};
     background: rgba(255,255,255,0.1);
     border-radius: 50%;
     width: 44px;
@@ -43,7 +45,7 @@
     &:hover, &:focus{background-color: $accentColor;}}
 .footer-sing{margin-left: 93px;}
 .footer-sing__form{
-    @include display;
+    @include tablet {@include display};
     margin-top: 20px;}
 .footer-sing__input{
     margin-right: 12px;
@@ -55,7 +57,7 @@
     background-color: $footerColor;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);}
 .footer-sing__btn{
-    display: inline-flex;
+    @include tablet {display: inline-flex};
     align-items: center;
     text-align: center;
     width: 200px;}
