--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -7,9 +7,12 @@
     padding-top: 48px;
     padding-bottom: 48px;
     background-color: $blank;;
-    transform:translateX(-100%);
+    transform:translateX(0);
     transition: transform 250ms $animation;
-    &.is-open {transform: translateX(0);}
+    &.is-open {
+        // @media screen and (max-width:480px){transform: translateX(135%);}
+        @include mobile {transform: translateX(100%);}}
+        @include tablet {display: none;}
     >.container {
         height: 100%;
         display:flex;
@@ -21,6 +24,8 @@
 }
 .mobmenu__open{
     position: absolute;
+    // display:inline-flex;
+    // margin-right: auto;
     top: 20px;
     right: 20px;
     background-color: transparent;
@@ -49,7 +54,8 @@
 .mobmenu__link--active{color:$accentColor;}
 .mobmenu-contact__item:not(:last-child){margin-bottom: 30px;}
 .mobmenu-sub__list{display: flex;}
-.tel {@include font(500,34,1.2,0.02);
+.tel {@include font (500,30,1.2,0.02);
+    @include mobile {@include font(500,34,1.2,0.02)};
     color: $accentColor;}
 .mail {@include font(500,24,1.2,0.02);
 color:$textColor;}
@@ -58,7 +64,8 @@ color:$textColor;}
     padding-right: 10px;
     padding-left: 10px;
     display:inline-flex;
-    @include font(500,18,1.2,0.02);
+    @include font(500,14,1.2,0.02);
+    @include mobile {@include font(500,18,1.2,0.02);};
     color: $accentColor;
     border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
