--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,14 +2,17 @@
     top: 0;
     left: 0;
     width:100%;
-    height: 100%;
+    height:100%;
+    padding: 100px;
     background-color:rgba(0, 0, 0, 0.2);
     opacity:1;
     transition: opacity 250ms $animation, visibility 250ms $animation;}
-.modal{position: absolute;
+.modal{
+    position: absolute;
     top: 50%;
     left:50%;
-    min-width: 530px;
+    width: 100%;
+    // min-width: 530px;
     padding: 40px;
     background-color:$backgroundColor;
     transform:translate(-50%,-50%) scale(1);
