--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -7,11 +7,10 @@
     padding-top: 48px;
     padding-bottom: 48px;
     background-color: $blank;;
-    transform:translateX(0);
+    transform:translateX(100%);
     transition: transform 250ms $animation;
     &.is-open {
-        // @media screen and (max-width:480px){transform: translateX(135%);}
-        @include mobile {transform: translateX(100%);}}
+        transform: translateX(0);}
         @include tablet {display: none;}
     >.container {
         height: 100%;
