--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -56,12 +56,13 @@
     @include desktop {margin-left: 93px;text-align: start;}
 }
 .footer-sing__form{
-    justify-items: center;
+    // justify-items: center;
+    @media screen and (min-width:320px){margin-top: 20px;}
     @include mobile {flex-wrap: wrap; width: 450px; margin-top: 20px;}
     @include desktop {display: flex; flex-wrap: nowrap;}
     }
 .footer-sing__input{
-    width: 75%;
+    width: 100%;
     height: 50px;
     padding: 15px 16px;
     border:1px solid rgba(255, 255, 255, 0.3);
@@ -69,7 +70,7 @@
     background-color: $footerColor;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     @include mobile {width: 450px;};
-    @include desktop {width: 358px; margin-right: 12px;};
+    @include desktop {width: 358px; margin-right: 12px;}
 }
 .footer-sing__btn{
     margin-top: 20px;
