--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -56,7 +56,7 @@
     @include desktop {margin-left: 93px;text-align: start;}
 }
 .footer-sing__form{
-    // justify-items: center;
+    justify-items: center;
     @media screen and (min-width:320px){margin-top: 20px;}
     @include mobile {flex-wrap: wrap; width: 450px; margin-top: 20px;}
     @include desktop {display: flex; flex-wrap: nowrap;}
